feat: 로또 구입 로직 추가

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 class="buy-lotto-input"
                 placeholder="구입 금액(최소 금액 1,000원, 최대 금액 100,000원)"
                 minlength="4"
+                maxlength="6"
               />
               <button type="submit" class="buy-lotto-submit-button" disabled>
                 구입
