feat: LottoGameForm 컴포넌트 추가

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           </form>
 
           <!-- lotto ticket list -->
+
+          <!-- lotto game form -->
+          </form>
         </div>
       </main>
 
