--- a/index.html
+++ b/index.html
@@ -19,26 +19,7 @@
 
       <main class="lotto-game-container">
         <div class="lotto-game-box">
-          <h2 class="lotto-game-title">🎱 내 번호 당첨 확인 🎱</h2>
-
           <!-- buy lotto -->
-          <form class="buy-lotto-form">
-            <label for="buy-lotto">구입할 금액을 입력해주세요.</label>
-            <p class="buy-lotto-input-box">
-              <input
-                type="text"
-                id="buy-lotto"
-                class="buy-lotto-input"
-                placeholder="구입 금액(최소 금액 1,000원, 최대 금액 100,000원)"
-                minlength="4"
-                maxlength="6"
-                inputmode="numeric"
-              />
-              <button type="submit" class="buy-lotto-submit-button" disabled>
-                구입
-              </button>
-            </p>
-          </form>
 
           <!-- lotto ticket list -->
 
@@ -51,6 +32,6 @@
         <p class="footer-text">Copyright 2023. woowacourse</p>
       </footer>
     </div>
-    <script type="module" src="./src/step2-index.js"></script>
+    <script type="module" defer src="./src/step2-index.js"></script>
   </body>
 </html>
