refactor: script 위치 수정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <script type="module" defer src="./src/step2-index.js"></script>
   </head>
 
   <body>
@@ -17,14 +18,9 @@
         </nav>
       </header>
 
+      <!-- lotto game -->
       <main class="lotto-game-container">
-        <div class="lotto-game-box">
-          <!-- buy lotto -->
-
-          <!-- lotto ticket list -->
-
-          <!-- lotto game form -->
-        </div>
+        <div class="lotto-game-box"></div>
       </main>
 
       <!-- footer -->
@@ -32,6 +28,5 @@
         <p class="footer-text">Copyright 2023. woowacourse</p>
       </footer>
     </div>
-    <script type="module" defer src="./src/step2-index.js"></script>
   </body>
 </html>
