refactor: 이미지 preload 설정

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preload" href="/public/lotto-ticket.png" as="image" />
+    <link rel="preload" href="/public/close.svg" as="image" />
     <script type="module" defer src="./src/step2-index.js"></script>
   </head>
 
